--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <title>Sockets</title>
 </head>
 <body>
-    <ul id="messages"></ul>
+    <div id="messages"></div>
     <form method="post" id="chatForm">
         <input type="text" id="chatTXT" autocomplete="off", autofocus="on">
         <div class="btn-group" role="group" aria-label="Basic example">
@@ -34,7 +34,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <input type="file" name="UplFlS" id="UplFlSid">
+                  <input type="file" name="UplFlS" id="UplFlSid" enctype="multipart/for-data">
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -49,21 +49,40 @@
 
 <script>
     let socket = io.connect('http://localhost:8080');
-    socket.on('is_online', (username) =>{
-        $("#messages").append($('<li>').html(username));
+    socket.on('is_online', (resp) =>{
+        $("#messages").append($('<li>').html(resp));
     });
     
     let username = prompt('¿Cual es tu nombre?');
     socket.emit('username', username);
 
-    $('form').submit((e) => {
+    $('#chatForm').submit((e) => {
         e.preventDefault();
         socket.emit('chat_message', $("#chatTXT").val());
         $("#chatTXT").val('');
         return false;
     });
 
+    $("#UplFlSid").on('change', (e) =>{
+      const file = e.originalEvent.target.files[0];
+      const reader = new FileReader();
+      reader.onload = (evt)=>{
+        $('#SelectFile').submit((e) => {
+          e.preventDefault();
+          socket.emit('upload_image', evt.target.result);
+          console.log(evt.target.result);
+          $("#UplFlSid").val('');
+        });
+      };
+      reader.readAsDataURL(file);
+    });
+
+
     socket.on('chat_message', (message) => {
         $("#messages").append($('<li>').html(message));
     });
+
+    socket.on('uploaded_img', (resp, image)=>{
+      $("#messages").append($('<li>').html(`${resp}<a target="_blank" href="${image}"><img src="${image}" /></a>`));
+    })
 </script>
